--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,18 @@
 cmake_minimum_required(VERSION 3.25)
 
 # 设置项目名称
-project(cpp)
+project(cpp VERSION 1.0)
 
 # 设置 C++ 标准
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-foreach(CONFIG_TYPE ${CMAKE_CONFIGURATION_TYPES})
+foreach (CONFIG_TYPE ${CMAKE_CONFIGURATION_TYPES})
     string(TOUPPER ${CONFIG_TYPE} CONFIG_TYPE_UPPER)  # 将当前正在处理的配置类型（${CONFIG_TYPE}）转换为大写字符串（${CONFIG_TYPE_UPPER}）
-#    set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} ${CMAKE_SOURCE_DIR}/packages)
+    # set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} ${CMAKE_SOURCE_DIR}/packages)
     set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} ${CMAKE_SOURCE_DIR}/lib)  # 设置当前配置类型的库文件（共享库和静态库）输出目录。
-#    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} ${CMAKE_SOURCE_DIR}/packages)
-endforeach()
+    # set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG_TYPE_UPPER} ${CMAKE_SOURCE_DIR}/packages)
+endforeach ()
 
 # 设置 vcpkg 的头文件查找路径，如在 CLion 的 CMake 的环境变量中配置了，则不需要；而在 Powershell 运行则需要新增该环境变量，因为有时候会读取不到这句（当 CMake 缓存生成时）
 #set(CMAKE_TOOLCHAIN_FILE "C:/Users/albert/.clion-vcpkg/vcpkg/scripts/buildsystems/vcpkg.cmake")
@@ -35,7 +35,7 @@ find_library(QUANTLIB_LIBRARY QuantLib PATHS "C:/Users/albert/Desktop/workhome/Q
 find_path(QUANTLIB_INCLUDE_DIR ql/quantlib.hpp PATHS "C:/Users/albert/Desktop/workhome/QuantLib")
 
 # 设置 Pybind11 的查找路径，由于我们的 pybind11 在 conda 创建的虚拟环境中，所以此处需要指定到 camke 所在路径
-set(pybind11_DIR  C:/Users/albert/.conda/envs/pb/lib/site-packages/pybind11/share/cmake/pybind11)
+set(pybind11_DIR C:/Users/albert/.conda/envs/pb/lib/site-packages/pybind11/share/cmake/pybind11)
 find_package(pybind11 CONFIG REQUIRED)
 message(STATUS "Found pybind11: ${pybind11_VERSION}")
 
@@ -52,7 +52,7 @@ target_include_directories(example PUBLIC ${QUANTLIB_INCLUDE_DIR})
 add_subdirectory(src/option)
 
 # 添加并生成一个可执行程序
-add_executable(${PROJECT_NAME} src/main.cpp)
+add_executable(${PROJECT_NAME} src/main.cpp src/version.h)
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${QUANTLIB_INCLUDE_DIR} ${PROJECT_SOURCE_DIR} ${PROJECT_BINARY_DIR} ${PROJECT_SOURCE_DIR}/src/option)
 # 指定要链接的动态库
